manifests/platform/grafana/config/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-b8m
  namespace: grafana
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
    - name: cluster-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "grafana.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - name: grafana
          port: 80
